# koopmans_workgraph_mwe

./: .cruft.json  .gitignore  CITATION.cff  LICENSE  README.md  inputs.json  justfile  outputs.json  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
02-quantumespresso-pw-nscf/: espresso.pwi  espresso.pwo  inputs.json  outputs.json
03-quantumespresso-pw-bands/: espresso.pwi  espresso.pwo  inputs.json  outputs.json  tmp
03-quantumespresso-pw-bands/pseudopotentials/: Si.upf
docs/source/: conf.py  index.rst  installation.rst  usage.rst
pw_nscf/: CRASH  espresso.err  espresso.pwi  espresso.pwo
pw_scf/: espresso.pwi  espresso.pwo  pwscf.xml
pw_scf/pseudopotentials/: Si.upf
pw_scf/pwscf.save/: charge-density.hdf5  wfc1.hdf5  wfc2.hdf5  wfc3.hdf5  wfc4.hdf5  wfc5.hdf5  wfc6.hdf5  wfc7.hdf5  wfc8.hdf5
src/koopmans_workgraph_mwe/: __init__.py  aiida_serializers.py  api.py  base.py  commands.py  files.py  kpoints.py  pint_config.py  pydantic_config.py  serialization.py  utils.py  version.py
src/koopmans_workgraph_mwe/calculators/: calculator.py  pw.py
src/koopmans_workgraph_mwe/engines/: aiida.py  engine.py  localhost.py
src/koopmans_workgraph_mwe/engines/ase/: __init__.py
src/koopmans_workgraph_mwe/normalize/: pw.py
src/koopmans_workgraph_mwe/os/: local.py
src/koopmans_workgraph_mwe/parameters/: pw.py
src/koopmans_workgraph_mwe/requirements/: pw.py
src/koopmans_workgraph_mwe/workflows/: scf_nscf_bands.py
src/koopmans_workgraph_mwe/workgraphs/: scf_nscf_bands.py
tests/: __init__.py  conftest.py  test_version.py
tests/tmp/: test_aiida_scf_nscf_bands_workflowcurrent
tests/workflows/: test_run_nscf_nscf_bands.py
tests/workgraphs/: test_run_nscf_nscf_bands.py  test_run_scf_nscf_bands.py
